deploy/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
spec:
  selector:
    matchLabels:
      app: nodejs-express-apiserver
  replicas: 3
  template:
    metadata:
      labels:
        app: nodejs-express-apiserver
    spec:
      containers:
        - name: nodejs-express-apiserver
          image: 'quay.io/joshgav/nodejs-express-apiserver:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
