deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-apiserver
spec:
  selector:
    app: nodejs-express-apiserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
