deploy/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apiserver
spec:
  to:
    kind: Service
    name: nodejs-express-apiserver
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http
